--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   --gold-dim: #CAA74E;
   --black: #0A0A0A;
   --card-bg: #111111;
+  --red: #FF4B4B;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   background: radial-gradient(circle at top, #1a1a1a 0%, #000000 70%);
   color: white;
   min-height: 100vh;
@@ -32,12 +33,11 @@ body {
 .hero { text-align: center; }
 
 .logo {
-  width: 840px; /* Big Logo request */
+  width: 940px; 
   max-width: 100%;
-  margin: 0 auto 10px auto; /* Tighter margin for the big logo */
+  margin: 0 auto 10px auto;
   display: block;
   filter: drop-shadow(0 0 40px rgba(255, 215, 0, 0.2));
-  transition: transform 0.4s ease;
 }
 
 h1 { 
@@ -52,8 +52,7 @@ h1 {
   color: #888;
   margin-bottom: 40px;
   max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 40px auto;
   line-height: 1.4;
 }
 
@@ -62,41 +61,46 @@ h1 {
   background: var(--card-bg);
   padding: 30px;
   border-radius: 20px;
-  max-width: 400px;
+  max-width: 420px;
   margin: 0 auto 80px auto;
   box-shadow: 0 20px 50px rgba(0,0,0,0.6);
   border: 1px solid #222;
+  text-align: left;
+}
+
+label {
+    color: var(--gold);
+    font-size: 10px;
+    font-weight: 800;
+    text-transform: uppercase;
+    display: block;
+    margin-bottom: 5px;
+    letter-spacing: 1px;
 }
 
 input, select {
   width: 100%;
   padding: 14px;
-  margin-bottom: 12px;
+  margin-bottom: 15px;
   border-radius: 10px;
   border: 1px solid #333;
   background: #000;
   color: white;
   box-sizing: border-box;
-  font-size: 15px;
 }
 
 .gold-btn {
   width: 100%;
-  padding: 16px;
+  padding: 18px;
   border: none;
-  border-radius: 10px;
+  border-radius: 12px;
   font-weight: 800;
   background: linear-gradient(135deg, var(--gold-dim), var(--gold));
   color: black;
   cursor: pointer;
   text-transform: uppercase;
   letter-spacing: 1px;
-  transition: 0.2s;
-}
-
-.gold-btn:hover {
-  transform: scale(1.02);
-  box-shadow: 0 0 20px rgba(255, 215, 0, 0.4);
+  margin-top: 10px;
 }
 
 /* VERDICT MODAL */
@@ -104,50 +108,59 @@ input, select {
   display: none;
   position: fixed;
   top: 0; left: 0; width: 100%; height: 100%;
-  background: rgba(0,0,0,0.94);
+  background: rgba(0,0,0,0.9);
   z-index: 9999;
   align-items: center;
   justify-content: center;
+  backdrop-filter: blur(8px);
 }
 
 .modal-content {
-  background: #0F0F0F;
-  padding: 40px;
-  border-radius: 24px;
+  background: #0D0D0D;
+  padding: 50px 30px;
+  border-radius: 40px;
   border: 2px solid var(--gold);
   text-align: center;
-  max-width: 380px;
-  box-shadow: 0 0 50px rgba(255, 215, 0, 0.15);
+  max-width: 450px;
+  width: 90%;
 }
 
-.signal-strength {
-  background: #1a1a1a;
-  padding: 12px;
-  border-radius: 10px;
-  margin: 20px 0;
-  color: var(--gold);
-  font-weight: 800;
+.modal-content h2 { font-size: 42px; font-weight: 900; margin: 0 0 20px 0; text-transform: uppercase; }
+.modal-content p { color: #E0E0E0; font-size: 17px; line-height: 1.6; margin-bottom: 30px; }
+
+.signal-pill {
+  background: #1A1A1A;
+  padding: 20px;
+  border-radius: 18px;
+  margin-bottom: 15px;
+  font-weight: 700;
+  font-size: 18px;
+  border: 1px solid #222;
+}
+
+.close-btn {
+  background: var(--gold);
+  color: black;
+  width: 100%;
+  padding: 20px;
+  border: none;
+  border-radius: 18px;
+  font-weight: 900;
+  font-size: 18px;
+  cursor: pointer;
   text-transform: uppercase;
 }
-
-/* PRICING */
-.pricing { text-align: center; border-top: 1px solid #111; padding-top: 60px; }
-.cards { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px; }
-.card { background: var(--card-bg); padding: 30px; border-radius: 16px; width: 260px; border: 1px solid #222; }
-.price-val { font-size: 32px; color: var(--gold); margin: 10px 0; font-weight: 800; }
-
-.footer { margin-top: 80px; text-align: center; color: #333; font-size: 12px; letter-spacing: 1px; }
 </style>
 </head>
 
 <body>
 
 <div id="verdict-modal">
-    <div class="modal-content">
-        <h2 style="color:var(--gold); font-size: 32px; margin: 0 0 15px 0;">VERDICT: PASS</h2>
-        <p style="color:#bbb; line-height: 1.5;">The market data confirms this is a high-probability flip. Basic comps show a 15% margin minimum.</p>
-        <div class="signal-strength">Signal Strength: High</div>
-        <button class="gold-btn" onclick="closeModal()">Close Verdict</button>
+    <div class="modal-content" id="modal-box">
+        <h2 id="verdict-title">VERDICT: --</h2>
+        <p id="verdict-desc">Analyzing...</p>
+        <div class="signal-pill" id="signal-text">Signal Strength: --</div>
+        <button class="close-btn" onclick="closeModal()">Close Verdict</button>
     </div>
 </div>
 
@@ -155,53 +168,95 @@ input, select {
   <div class="hero">
     <img src="logo.png" class="logo" alt="Garnett Work Logo" />
     <h1>Verify with Confidence.</h1>
-    <p class="sub">
-      Garnett Work analyzes <span style="color:var(--gold);">Facebook Marketplace</span> and 
-      <span style="color:var(--gold);">eBay listings</span> using real market data.
-    </p>
+    <p class="sub">Stop guessing. We calculate the hidden fees and shipping so you see the real profit.</p>
 
     <div class="form-card">
-      <input type="text" id="urlInput" placeholder="Paste listing URL (eBay/FB)" />
-      <input type="number" placeholder="Buy Price ($)" />
-      <select>
-        <option>Used</option>
-        <option>New</option>
+      <label>Platform</label>
+      <select id="platform" onchange="toggleShipping()">
+        <option value="ebay">eBay (13.5% Fee)</option>
+        <option value="fb_shipped">FB Marketplace (10% Fee)</option>
+        <option value="fb_local">FB Marketplace (Local Cash)</option>
       </select>
-      <button class="gold-btn" onclick="showVerdict()">Get Teaser Verdict (Free)</button>
+
+      <label>Listing URL</label>
+      <input type="text" id="urlInput" placeholder="Paste link here...">
+      
+      <div style="display:flex; gap:12px;">
+        <div style="flex:1;">
+            <label>Buy Price ($)</label>
+            <input type="number" id="buyPrice" placeholder="50">
+        </div>
+        <div style="flex:1;">
+            <label>Est. Sale ($)</label>
+            <input type="number" id="marketValue" placeholder="120">
+        </div>
+      </div>
+
+      <div id="shipping-row">
+        <label>Estimated Shipping Cost ($)</label>
+        <input type="number" id="shippingCost" value="12">
+      </div>
+      
+      <button class="gold-btn" onclick="runTruthMath()">Get Teaser Verdict (Free)</button>
     </div>
   </div>
-
-  <div class="pricing">
-    <h2 style="margin:0;">Simple Pricing.</h2>
-    <div class="cards">
-        <div class="card">
-          <h3 style="margin:0; color:#555; font-size: 13px; text-transform: uppercase;">Teaser</h3>
-          <div class="price-val">FREE</div>
-          <p style="color:#777; font-size: 13px;">Instant PASS/FAIL teaser.</p>
-        </div>
-        <div class="card" style="border-color: #444;">
-          <h3 style="margin:0; color:#555; font-size: 13px; text-transform: uppercase;">Single</h3>
-          <div class="price-val">$0.25</div>
-          <p style="color:#777; font-size: 13px;">One full Truth Packet.</p>
-        </div>
-        <div class="card">
-          <h3 style="margin:0; color:#555; font-size: 13px; text-transform: uppercase;">Starter</h3>
-          <div class="price-val">$10/mo</div>
-          <p style="color:#777; font-size: 13px;">50 unlocks included.</p>
-        </div>
-    </div>
-  </div>
-
-  <div class="footer">GARNETT WORK © 2026 — TRUTH OVER HYPE.</div>
 </div>
 
 <script>
-    function showVerdict() {
+    function toggleShipping() {
+        const platform = document.getElementById('platform').value;
+        const row = document.getElementById('shipping-row');
+        row.style.display = (platform === 'fb_local') ? 'none' : 'block';
+    }
+
+    function runTruthMath() {
+        const buy = parseFloat(document.getElementById('buyPrice').value);
+        const sell = parseFloat(document.getElementById('marketValue').value);
+        const ship = parseFloat(document.getElementById('shippingCost').value) || 0;
+        const platform = document.getElementById('platform').value;
         const url = document.getElementById('urlInput').value;
-        if(url.trim() === "") {
-            alert("Please paste a listing URL first!");
+
+        if(!url || isNaN(buy) || isNaN(sell)) {
+            alert("Please fill in the URL, Buy Price, and Sale Price.");
+            return;
+        }
+
+        let fees = 0;
+        let finalProfit = 0;
+
+        if (platform === 'ebay') {
+            fees = (sell * 0.135) + 0.30; 
+            finalProfit = sell - fees - ship - buy;
+        } else if (platform === 'fb_shipped') {
+            fees = (sell + ship) * 0.10; 
+            finalProfit = sell - fees - ship - buy;
         } else {
-            document.getElementById('verdict-modal').style.display = 'flex';
+            fees = 0;
+            finalProfit = sell - buy;
+        }
+
+        const margin = (finalProfit / sell) * 100;
+        const title = document.getElementById('verdict-title');
+        const desc = document.getElementById('verdict-desc');
+        const signal = document.getElementById('signal-text');
+        const modalBox = document.getElementById('modal-box');
+
+        document.getElementById('verdict-modal').style.display = 'flex';
+
+        if (margin >= 20) {
+            title.innerHTML = "VERDICT: PASS";
+            title.style.color = "var(--gold)";
+            modalBox.style.borderColor = "var(--gold)";
+            desc.innerHTML = `This deal is solid. After ${platform.replace('_', ' ')} fees ($${fees.toFixed(2)}) and shipping, you clear <b>$${finalProfit.toFixed(2)}</b> (${margin.toFixed(1)}% margin).`;
+            signal.innerHTML = "Signal Strength: High";
+            signal.style.color = "var(--gold)";
+        } else {
+            title.innerHTML = "VERDICT: FAIL";
+            title.style.color = "var(--red)";
+            modalBox.style.borderColor = "var(--red)";
+            desc.innerHTML = `Hidden costs kill this deal. After fees and shipping, your profit drops to <b>$${finalProfit.toFixed(2)}</b> (${margin.toFixed(1)}% margin).`;
+            signal.innerHTML = "Signal Strength: Weak";
+            signal.style.color = "var(--red)";
         }
     }
 
